apps/paperless/manifests/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/name: paperless
    app.kubernetes.io/version: 1.17.4
  name: paperless
  namespace: paperless
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/name: paperless
