apps/paperless/manifests/web/serviceHeadless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/name: paperless
    app.kubernetes.io/version: 2.7.2
  name: paperless-headless
  namespace: paperless
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/name: paperless
