apps/paperless/manifests/web/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-req-status-code: "429"
    nginx.ingress.kubernetes.io/limit-rpm: "100"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
  labels:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/name: paperless
    app.kubernetes.io/version: 1.15.1
  name: paperless-nginx
  namespace: paperless
spec:
  ingressClassName: nginx
  rules:
  - host: papers.krupa.net.pl
    http:
      paths:
      - backend:
          service:
            name: paperless
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - papers.krupa.net.pl
    secretName: paperless-tls
